Actualizar texto de navegación y contenido en varias páginas

--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -21,7 +21,7 @@
                         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="sobre-nosotros.html">Sobre Mí</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categrorías</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="todos-productos.html">Todos los Productos</a></li>
                                 <li><hr class="dropdown-divider" /></li>
@@ -47,11 +47,11 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="mb-4">Nuestra Historia</h2>
-                        <p class="mb-4">Bienvenido a Mosaicosole, donde cada pieza nace desde el alma. Somos artesanos dedicados a crear mosaicos y obras de arte únicas que transforman espacios y corazones.</p>
-                        <p class="mb-4">Desde nuestros inicios, hemos trabajado con pasión para llevar la belleza del arte a cada rincón. Cada proyecto es una historia, cada detalle es importante, y cada cliente es parte de nuestra familia.</p>
-                        <h3 class="mb-3">Nuestra Misión</h3>
-                        <p>Crear obras de arte que inspiren, emocionen y transformen los espacios donde viven nuestros clientes, manteniendo la calidad y la dedicación como pilares fundamentales.</p>
+                        <h2 class="mb-4">Mí Historia</h2>
+                        <p class="mb-4">Bienvenido a Mosaicosole, donde cada pieza nace desde el alma. Soy Soledad Viudez y desde el año 2019 estoy dedicada a crear mosaicos y obras de arte únicas que transforman espacios y corazones.</p>
+                        <p class="mb-4">Desde mis inicios, he trabajado con pasión para llevar la belleza del arte a cada rincón. Cada proyecto es una historia, cada detalle es importante, y cada cliente es parte de mi familia.</p>
+                        <h3 class="mb-3">Mí Misión</h3>
+                        <p>Crear obras de arte que inspiren, emocionen y transformen los espacios donde viven mis clientes, manteniendo la calidad y la dedicación como pilares fundamentales.</p>
                     </div>
                 </div>
             </div>
