--- a/nuevos.html
+++ b/nuevos.html
@@ -19,7 +19,7 @@
                         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="sobre-nosotros.html">Sobre Mí</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                            <a class="nav-link dropdown-toggle active" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categrorías</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="todos-productos.html">Todos los Productos</a></li>
                                 <li><hr class="dropdown-divider" /></li>
@@ -46,16 +46,16 @@
 
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Nuevo</div>
-                            <img class="card-img-top" src="6.jpeg" alt="..." />
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Popular</div>
+                            <img class="card-img-top" src="Amy Winehouse.jpeg" alt="..." />
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <h5 class="fw-bolder">Esfera</h5>
+                                    <h5 class="fw-bolder">Amy Winehouse</h5>
                                 </div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center">
-                                    <a class="btn btn-outline-dark mt-auto" href="https://wa.me/5491112345678?text=Hola!%20te%20quería%20consultar%20sobre%20el%20cuadro%20Esfera" target="_blank">
+                                    <a class="btn btn-outline-dark mt-auto" href="https://wa.me/5491112345678?text=Hola!%20te%20quería%20consultar%20sobre%20el%20cuadro%20de%20Amy%20Winehouse" target="_blank">
                                        <i class="bi bi-whatsapp"></i> Consultar
                                     </a>
                                 </div>
