Add product detail pages for various mosaic artworks including Amy Winehouse, Esfera, Espejo Azul, Espejo Frida Kahlo, Joker, Mujer Maravilla, Negro, and Salmón. Each page includes a description, images, and a WhatsApp contact link for inquiries.

--- a/producto-joker.html
+++ b/producto-joker.html
@@ -5,9 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Sobre Mí</title>
+        <title>Joker - MOSAICOSOLE</title>
+        <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
@@ -19,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="sobre-nosotros.html">Sobre Mí</a></li>
+                        <li class="nav-item"><a class="nav-link" href="sobre-nosotros.html">Sobre Mí</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categrorías</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -37,25 +40,40 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Sobre Nosotros</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">Conoce nuestra historia</p>
+                    <h1 class="display-4 fw-bolder">Joker</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">Cada pieza nace desde el alma</p>
                 </div>
             </div>
         </header>
-        <!-- Section-->
+        <!-- Product Details-->
         <section class="py-5">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-lg-8 mx-auto">
-                        <h2 class="mb-4">Mí Historia</h2>
-                        <p class="mb-4">Desde el año 2016, comencé este camino en el mundo del mosaiquismo junto a Florencia, con quien compartí los primeros años de trabajo, ferias, aprendizajes y muchísimas creaciones compartidas. Aquella etapa fue el inicio de una pasión que creció con cada obra, cada taller y cada cliente que confió.</p> 
-                        <p class="mb-4">Hoy continúo ese camino con un proyecto más personal, en el que cada pieza es diseñada, pensada y realizada por mí, de forma completamente artesanal.</p>
-                        <p class="mb-4">En MosaicoSole, cada obra es única: no hay dos iguales. Trabajo con materiales nobles y reciclados, integrando el color, la forma y el alma de cada persona que confía en mí para crear algo especial.</p>
-                        <p class="mb-4">Realizo espejos, cuadros, objetos decorativos y composiciones a medida. Muchas veces me inspiro en una foto, un rincón de la casa, un recuerdo o una historia. Porque más que vender objetos, creo piezas con sentido.</p>
-                        <p class="mb-4">Esta pagina es una invitación a conocer lo que hago, pero también lo que soy.
-                        <p class="mb-4">Gracias por estar acá.</p>
-                        <h3 class="mb-3">Mí Misión</h3>
-                        <p>Crear obras de arte que inspiren, emocionen y transformen los espacios donde viven mis clientes, manteniendo la calidad y la dedicación como pilares fundamentales.</p>
+            <div class="container px-4 px-lg-5 mt-5">
+                <div class="row gx-4 gx-lg-5 align-items-center">
+                    <div class="col-md-6">
+                        <img class="card-img-top mb-5 mb-md-0" src="Joker1.jpeg" alt="Joker" />
+                    </div>
+                    <div class="col-md-6">
+                        <h2 class="display-5 fw-bolder">Descripción</h2>
+                        <p class="lead">Este mosaico representa al icónico Joker, con detalles expresivos y colores vibrantes que capturan su esencia caótica y fascinante. Una obra de arte para amantes del cine y el cómic, creada con precisión y pasión.</p>
+                        <p>Dimensiones: 60x80 cm<br>Material: Vidrio y cerámica<br>Técnica: Mosaico figurativo</p>
+                        <div class="d-flex">
+                            <a class="btn btn-outline-dark flex-shrink-0" href="https://wa.me/5492215436779?text=Hola!%20te%20quería%20consultar%20sobre%20el%20cuadro%20del%20Joker" target="_blank">
+                                <i class="bi bi-whatsapp"></i> Consultar
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- More Images -->
+                <div class="row gx-4 gx-lg-5 mt-5">
+                    <h3 class="text-center mb-4">Más Fotos</h3>
+                    <div class="col-md-4">
+                        <img class="img-fluid rounded" src="Joker1.jpeg" alt="Joker vista 1" />
+                    </div>
+                    <div class="col-md-4">
+                        <img class="img-fluid rounded" src="Joker2.jpeg" alt="Joker vista 2" />
+                    </div>
+                    <div class="col-md-4">
+                        <img class="img-fluid rounded" src="Joker3.jpeg" alt="Joker vista 3" />
                     </div>
                 </div>
             </div>
@@ -64,7 +82,9 @@
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Mosaicosole 2019</p></div>
         </footer>
+        <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
 </html>
