--- a/todos-productos.html
+++ b/todos-productos.html
@@ -46,10 +46,14 @@
 
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <img class="card-img-top" src="1.jpeg" alt="..." />
+                            <a href="producto-salmon.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="1.jpeg" alt="..." />
+                            </a>
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <h5 class="fw-bolder">Salmón</h5>
+                                    <a href="producto-salmon.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Salmón</h5>
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -65,10 +69,14 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                            <img class="card-img-top" src="2.jpeg" alt="..." />
+                            <a href="producto-negro.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="2.jpeg" alt="..." />
+                            </a>
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <h5 class="fw-bolder">Negro</h5>
+                                    <a href="producto-negro.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Negro</h5>
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -84,10 +92,14 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                            <img class="card-img-top" src="3.jpeg" alt="..." />
+                            <a href="producto-espejo-azul.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="3.jpeg" alt="..." />
+                            </a>
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <h5 class="fw-bolder">Espejo - Azul</h5>
+                                    <a href="producto-espejo-azul.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Espejo - Azul</h5>
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -102,10 +114,14 @@
 
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <img class="card-img-top" src="6.jpeg" alt="..." />
+                            <a href="producto-esfera.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="6.jpeg" alt="..." />
+                            </a>
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <h5 class="fw-bolder">Esfera</h5>
+                                    <a href="producto-esfera.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Esfera</h5>
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -121,10 +137,14 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                            <img class="card-img-top" src="Amy Winehouse.jpeg" alt="..." />
+                            <a href="producto-amy-winehouse.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="Amy Winehouse.jpeg" alt="..." />
+                            </a>
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <h5 class="fw-bolder">Amy Winehouse</h5>
+                                    <a href="producto-amy-winehouse.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Amy Winehouse</h5>
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -139,10 +159,14 @@
 
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <img class="card-img-top" src="Joker1.jpeg" alt="..." />
+                            <a href="producto-joker.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="Joker1.jpeg" alt="..." />
+                            </a>
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <h5 class="fw-bolder">Joker</h5>
+                                    <a href="producto-joker.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Joker</h5>
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -158,10 +182,14 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                            <img class="card-img-top" src="Frida Kahlo.jpeg" alt="..." />
+                            <a href="producto-espejo-frida-kahlo.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="Frida Kahlo.jpeg" alt="..." />
+                            </a>
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <h5 class="fw-bolder">Espejo - Frida Kahlo</h5>
+                                    <a href="producto-espejo-frida-kahlo.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Espejo - Frida Kahlo</h5>
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -176,10 +204,14 @@
 
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <img class="card-img-top" src="Wonder Woman.jpeg" alt="..." />
+                            <a href="producto-mujer-maravilla.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="Wonder Woman.jpeg" alt="..." />
+                            </a>
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <h5 class="fw-bolder">Mujer Maravilla</h5>
+                                    <a href="producto-mujer-maravilla.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Mujer Maravilla</h5>
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
