--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="1.jpeg" alt="..." />
+                            <a href="producto-salmon.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="1.jpeg" alt="..." />
+                            </a>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Salmón</h5>
-                                    <!-- Product price-->
-                                
+                                    <a href="producto-salmon.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Salmón</h5>
+                                    </a>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -81,12 +83,16 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="2.jpeg" alt="..." />
+                            <a href="producto-negro.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="2.jpeg" alt="..." />
+                            </a>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Negro</h5>
+                                    <a href="producto-negro.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Negro</h5>
+                                    </a>
                                     <!-- Product price
                                     <span class="text-muted text-decoration-line-through">$20.00</span>
                                     $18.00-->
@@ -110,12 +116,16 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="3.jpeg" alt="..." />
+                            <a href="producto-espejo-azul.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="3.jpeg" alt="..." />
+                            </a>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Espejo - Azul</h5>
+                                    <a href="producto-espejo-azul.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Espejo - Azul</h5>
+                                    </a>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -134,12 +144,16 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="6.jpeg" alt="..." />
+                            <a href="producto-esfera.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="6.jpeg" alt="..." />
+                            </a>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Esfera</h5>
+                                    <a href="producto-esfera.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Esfera</h5>
+                                    </a>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -159,12 +173,16 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="Amy Winehouse.jpeg" alt="..." />
+                            <a href="producto-amy-winehouse.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="Amy Winehouse.jpeg" alt="..." />
+                            </a>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Amy Winehouse</h5>
+                                    <a href="producto-amy-winehouse.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Amy Winehouse</h5>
+                                    </a>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -183,12 +201,16 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="Joker1.jpeg" alt="..." />
+                            <a href="producto-joker.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="Joker1.jpeg" alt="..." />
+                            </a>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Joker</h5>
+                                    <a href="producto-joker.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Joker</h5>
+                                    </a>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -209,12 +231,16 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="Frida Kahlo.jpeg" alt="..." />
+                            <a href="producto-espejo-frida-kahlo.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="Frida Kahlo.jpeg" alt="..." />
+                            </a>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Espejo - Frida Kahlo</h5>
+                                    <a href="producto-espejo-frida-kahlo.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Espejo - Frida Kahlo</h5>
+                                    </a>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -233,12 +259,16 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="Wonder Woman.jpeg" alt="..." />
+                            <a href="producto-mujer-maravilla.html" style="text-decoration: none; color: inherit;">
+                                <img class="card-img-top" src="Wonder Woman.jpeg" alt="..." />
+                            </a>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Mujer Maravilla</h5>
+                                    <a href="producto-mujer-maravilla.html" style="text-decoration: none; color: inherit;">
+                                        <h5 class="fw-bolder">Mujer Maravilla</h5>
+                                    </a>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -259,7 +289,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Mosaicosole 2019</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Mosaicosole 2016</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
