Add new HTML pages for product categories: Exterior, Fanales, Logos, Macetas, Mandalas, Mesas, Murales, Portallaves, and Portarretratos with navigation and footer sections.

--- a/index.html
+++ b/index.html
@@ -24,12 +24,20 @@
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="sobre-nosotros.html">Sobre Mí</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categrorías</a>
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="todos-productos.html">Todos los Productos</a></li>
+                                <li><a class="dropdown-item" href="cuadros.html">Cuadros</a></li>
+                                <li><a class="dropdown-item" href="mandalas.html">Mandalas (Redondas)</a></li>
+                                <li><a class="dropdown-item" href="espejos.html">Espejos</a></li>
+                                <li><a class="dropdown-item" href="mesas.html">Mesas</a></li>
+                                <li><a class="dropdown-item" href="portarretratos.html">Portarretratos</a></li>
+                                <li><a class="dropdown-item" href="portallaves.html">Portallaves</a></li>
+                                <li><a class="dropdown-item" href="fanales.html">Fanales</a></li>
+                                <li><a class="dropdown-item" href="macetas.html">Macetas</a></li>
+                                <li><a class="dropdown-item" href="murales.html">Murales</a></li>
+                                <li><a class="dropdown-item" href="logos.html">Logos</a></li>
                                 <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="populares.html">Items Populares </a></li>
-                                <li><a class="dropdown-item" href="nuevos.html">Nuevos Lanzamientos</a></li>
+                                <li><a class="dropdown-item" href="exterior.html">Exterior</a></li>
                             </ul>
                         </li>
                     </ul>
